@@ -1,5 +1,12 @@
 2006-01-28 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/Utils.cc: fixed small bug in unmount()
+	* src/jfs.cc,
+	  src/xfs.cc: check if error actually contains data before adding it
+	  to the feedbackdata. (this prevents empty rows in the operationtree)
+
+2006-01-28 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/Dialog_Progress.h,
 	  src/Dialog_Progress.cc,
 	  src/FileSystem.cc: added markup to operationdetails
